--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,15 @@
 body {
   color: var(--primary-color-dark);
   font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
 }
+
+adress {
+  font-style: normal;
+}
+
 ul {
   list-style-type: none;
 }
@@ -19,10 +27,12 @@ ul {
 /* Link */
 .link {
   color: var(--primary-color-light);
+  text-decoration: none;
 }
 
 .link:hover {
   color: var(--primary-color-green);
+  font-weight: 600;
 }
 
 /* Button */
@@ -32,6 +42,7 @@ ul {
   border: 2px solid var(--primary-color-green);
   border-radius: 8px;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .button:hover {
@@ -39,19 +50,90 @@ ul {
   color: var(--secondaty-color-green);
 }
 
+.section-title {
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1, 3;
+}
+
+.section-title .accent {
+  color: var(--secondaty-color-green);
+}
+
 /* Hero section */
 .hero-title {
   color: var(--primary-color-light);
+  text-align: center;
+  font-size: 128px;
+  font-weight: 900;
 }
 .hero-title .accent {
   color: var(--primary-color-green);
 }
+
+/* Advantage section */
 
 .advantage-list {
   background-color: var(--primary-color-green);
   color: var(--primary-color-light);
 }
 
-.chef-title .accent {
+.advantage-item {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+/* Tradition section */
+
+.tradition-text span {
+  color: var(--primary-color-green);
+}
+
+.tradition-text .uppercase {
+  text-transform: uppercase;
+}
+
+/* Chefs section */
+
+.chefs-title {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+/* Format section */
+
+.format-title {
+  font-style: 24px;
+  font-weight: 600;
+  color: var(--primary-color-light);
+}
+
+.format-text {
+  font-weight: 300;
+  font-size: 14px;
+  color: var(--primary-color-light);
+}
+
+/* Contact section */
+
+.contakt-text {
   color: var(--secondaty-color-green);
+}
+
+/* Footer */
+
+.adres-link {
+  font-size: 16px;
+  font-weight: 300;
+  color: var(--primary-color-light);
+}
+
+.adres-link:hover {
+  color: var(--primary-color-green);
+  text-decoration: none;
+}
+
+.copyright {
+  font-size: 14px;
+  font-weight: 400;
 }
